Implemented tests for ExchangeRateServiceImpl.findByCurrencyAndDate and clean code in another methods